mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_var.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_undefined_var.mux`
error: Undefined variable 'x'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_undefined_var.mux:2:7
   |
 2 | print(x)
   |       ^
